[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "styletts2"
dynamic = ["version"]
description = "Text-to-Speech Synthesis for the Speech Generation for Indigenous Language Education Small Teams Project"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Aidan Pine", email = "hello@aidanpine.ca" },
]
maintainers = [
    { name = "Aidan Pine", email = "Aidan.Pine@nrc-cnrc.gc.ca" },
    { name = "Samuel Larkin", email = "Samuel.Larkin@nrc-cnrc.gc.ca" },
    { name = "Eric Joanis", email = "Eric.Joanis@nrc-cnrc.gc.ca" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "everyvoice==0.3.*",
    "munch",
    "einops-exts",
    "monotonic_align @ git+https://github.com/resemble-ai/monotonic_align.git"
    ]

[project.urls]
Homepage = "https://github.com/EveryVoiceTTS/StyleTTS2"
Repository = "https://github.com/EveryVoiceTTS/StyleTTS2"
Issues = "https://github.com/EveryVoiceTTS/StyleTTS2/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "styletts2/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/styletts2"]

[tool.hatch.build.targets.wheel]
include = ["/styletts2"]

[project.optional-dependencies]
dev = ["everyvoice[dev]"]
